# Copyright 2018 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

import("//build/image/image.gni")
import("//test/hftest/args.gni")

config("config") {
  include_dirs = [ "inc" ]
}

# Tests with secondary VMs.
vm_kernel("primary_with_secondaries_test_vm") {
  testonly = true
  public_configs = [
    ":config",
    "//src/arch/aarch64:config",
  ]

  sources = [
    "boot.c",
    "debug_el1.c",
    "ffa.c",
    "floating_point.c",
    "interrupts.c",
    "mailbox.c",
    "memory_sharing.c",
    "no_services.c",
    "perfmon.c",
    "run_race.c",
    "smp.c",
    "sysregs.c",
    "unmapped.c",
  ]

  deps = [
    "//src/arch/aarch64/hftest:registers",
    "//test/hftest:hftest_primary_vm",
    "//test/vmapi/common",
    "//vmlib",
  ]
}

manifest("primary_with_secondaries_test_manifest") {
  source = "manifest.dts"
  overlay = hftest_manifest_overlay
}

initrd("primary_with_secondaries_test") {
  testonly = true

  files = [
    [
      "manifest.dtb",
      ":primary_with_secondaries_test_manifest",
      "manifest.dtb",
    ],
    [
      "primary_with_secondaries_test",
      ":primary_with_secondaries_test_vm",
      "primary_with_secondaries_test_vm.bin",
    ],
    [
      "services1",
      "services:service_vm1",
      "service_vm1.bin",
    ],
    [
      "services2",
      "services:service_vm2",
      "service_vm2.bin",
    ],
    [
      "services3",
      "services:service_vm3",
      "service_vm3.bin",
    ],
  ]
}
